--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -51,6 +51,8 @@ italic-strong
   text-align: center
 .tabs-a__tab 
   background-color: #f8f0f9
+.tabs-a.color-acento-contenido .mb-3
+  margin-bottom: 0.4rem !important
 
 .tarjeta100 .tarjeta
   width: 100%
