--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -26,6 +26,8 @@ italic-strong
   background-color: #f7eff9  
 .bg-gris
   background-color: #F6F6F6    
+.bg-amarillo  
+  background-color: #FFFCBA
 
 .border-acento-contenido
   border: 2px solid #5C22C3  
@@ -65,6 +67,25 @@ italic-strong
   width: 47px
   height: 47px
 
+.img-pasos
+  width: 80px
+.pasos-a__circle
+  width: 65px
+  height: 65px
+  min-width: 65px
+.pasos-a__linea__esquina__linea
+  border-radius: 0px
+
+.tarjeta--tabla
+  background-color: #CDE6FA
+.tarjeta--tabla:nth-child(even)
+  background-color: #EBF6FF
+
+.bloque-texto-a.color-secundario
+  background-color: #BA68C8
+.bloque-texto-a.color-secundario:before
+  background-color: #f7dbfb
+
 
 @media screen and (max-width: 991px)  
   .slyder-a__btn--sigt, .slyder-a__btn--atrs
@@ -95,6 +116,42 @@ italic-strong
   transition: all 0.3s ease-in-out 0s
 .tarjeta-hover:hover .contenido-morado, .tarjeta-hover:hover .contenido-azul
   opacity: 1  
+
+
+// TARJETA NUMEROS CENTRADOS TEMA 2
+.titulo-numero-acento-contenido
+  height: 10%
+  position: relative
+  padding-top: 25px
+  display: flex
+  flex-direction: column
+  flex-wrap: wrap
+  align-content: center
+  justify-content: center
+.fondo-1-acento-contenido  
+  margin: 0 auto
+  border: 0px solid #5C22C3
+  width: 55px
+  height: 56px
+  position: absolute
+  left: 45%
+.titulo-numero-acento-contenido h3
+  position: absolute
+  left: 50%
+  top: 0
+  transform: translateX(-50%)
+  margin: 0 auto
+  color: #FFF
+  font-size: 30px
+  text-align: center
+  background-color: #5C22C3
+  width: 50px
+  height: 50px
+  display: flex
+  flex-direction: column
+  flex-wrap: nowrap
+  align-content: center
+  justify-content: center 
 
 
 // TARJETA NUMERADA TEMA 3.1
